tests/NormalTests/paczka1/fuzzy1/78105889.err
Error in line 9: V1bzHzWifoa S75 47,1
Error in line 10: l7vvCL A418 8,1
Error in line 14: l7vvCL S75 2,4
Error in line 19: R0I2gE3 A704 63,9
Error in line 12: A704 S75 90,1
Error in line 37: A704 A260 97,8
